--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1157,6 +1157,10 @@ select {
 	margin-top: 0.5rem;
 	margin-bottom: 0.5rem;
 }
+.my-24 {
+	margin-top: 6rem;
+	margin-bottom: 6rem;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1232,17 +1236,20 @@ select {
 .-mt-px {
 	margin-top: -1px;
 }
-.mt-0 {
-	margin-top: 0px;
-}
 .mr-4 {
 	margin-right: 1rem;
 }
 .mt-24 {
 	margin-top: 6rem;
 }
-.mt-12 {
-	margin-top: 3rem;
+.mb-2 {
+	margin-bottom: 0.5rem;
+}
+.mr-1 {
+	margin-right: 0.25rem;
+}
+.mt-0 {
+	margin-top: 0px;
 }
 .block {
 	display: block;
@@ -1286,11 +1293,11 @@ select {
 .h-20 {
 	height: 5rem;
 }
-.h-auto {
-	height: auto;
-}
 .h-36 {
 	height: 9rem;
+}
+.h-auto {
+	height: auto;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1405,9 +1412,6 @@ select {
 }
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
-}
-.grid-cols-4 {
-	grid-template-columns: repeat(4, minmax(0, 1fr));
 }
 .flex-col {
 	flex-direction: column;
@@ -1799,6 +1803,9 @@ select {
 .leading-4 {
 	line-height: 1rem;
 }
+.leading-6 {
+	line-height: 1.5rem;
+}
 .tracking-widest {
 	letter-spacing: 0.1em;
 }
@@ -1872,6 +1879,14 @@ select {
 .text-gray-300 {
 	--tw-text-opacity: 1;
 	color: rgba(209, 213, 219, var(--tw-text-opacity));
+}
+.text-red-400 {
+	--tw-text-opacity: 1;
+	color: rgba(248, 113, 113, var(--tw-text-opacity));
+}
+.text-yellow-400 {
+	--tw-text-opacity: 1;
+	color: rgba(251, 191, 36, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
