--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1069,6 +1069,20 @@ select {
 .prose > :last-child {
 	margin-bottom: 0;
 }
+.sr-only {
+	position: absolute;
+	width: 1px;
+	height: 1px;
+	padding: 0;
+	margin: -1px;
+	overflow: hidden;
+	clip: rect(0, 0, 0, 0);
+	white-space: nowrap;
+	border-width: 0;
+}
+.static {
+	position: static;
+}
 .fixed {
 	position: fixed;
 }
@@ -1105,18 +1119,29 @@ select {
 .order-1 {
 	order: 1;
 }
+.order-3 {
+	order: 3;
+}
 .col-span-6 {
 	grid-column: span 6 / span 6;
 }
-
 .col-span-1 {
 	grid-column: span 1 / span 1;
 }
-.col-span-2 {
-	grid-column: span 2 / span 2;
-}
 .float-right {
 	float: right;
+}
+.float-left {
+	float: left;
+}
+.float-none {
+	float: none;
+}
+.m-0 {
+	margin: 0px;
+}
+.m-auto {
+	margin: auto;
 }
 .mx-auto {
 	margin-left: auto;
@@ -1134,7 +1159,10 @@ select {
 	margin-top: 4rem;
 	margin-bottom: 4rem;
 }
-
+.my-0 {
+	margin-top: 0px;
+	margin-bottom: 0px;
+}
 .ml-3 {
 	margin-left: 0.75rem;
 }
@@ -1204,7 +1232,6 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
-
 .ml-auto {
 	margin-left: auto;
 }
@@ -1237,13 +1264,12 @@ select {
 }
 .mt-0 {
 	margin-top: 0px;
-
-.mr-4 {
-	margin-right: 1rem;
 }
-.mt-24 {
-	margin-top: 6rem;
-
+.ml-0 {
+	margin-left: 0px;
+}
+.mb-0 {
+	margin-bottom: 0px;
 }
 .block {
 	display: block;
@@ -1256,6 +1282,9 @@ select {
 }
 .inline-flex {
 	display: inline-flex;
+}
+.table {
+	display: table;
 }
 .grid {
 	display: grid;
@@ -1292,7 +1321,6 @@ select {
 }
 .h-36 {
 	height: 9rem;
-
 }
 .h-60 {
 	height: 15rem;
@@ -1300,12 +1328,11 @@ select {
 .h-32 {
 	height: 8rem;
 }
-.h-auto {
-	height: auto;
-}
 .h-2 {
 	height: 0.5rem;
-
+}
+.h-auto {
+	height: auto;
 }
 .min-h-screen {
 	min-height: 100vh;
@@ -1367,6 +1394,9 @@ select {
 .max-w-xl {
 	max-width: 36rem;
 }
+.max-w-6xl {
+	max-width: 72rem;
+}
 .flex-1 {
 	flex: 1 1 0%;
 }
@@ -1421,11 +1451,6 @@ select {
 .grid-cols-1 {
 	grid-template-columns: repeat(1, minmax(0, 1fr));
 }
-
-.grid-cols-3 {
-	grid-template-columns: repeat(3, minmax(0, 1fr));
-}
-
 .flex-col {
 	flex-direction: column;
 }
@@ -1535,6 +1560,9 @@ select {
 .border-2 {
 	border-width: 2px;
 }
+.border-0 {
+	border-width: 0px;
+}
 .border-b-2 {
 	border-bottom-width: 2px;
 }
@@ -1546,6 +1574,9 @@ select {
 }
 .border-b {
 	border-bottom-width: 1px;
+}
+.border-r {
+	border-right-width: 1px;
 }
 .border-gray-300 {
 	--tw-border-opacity: 1;
@@ -1566,7 +1597,6 @@ select {
 	--tw-border-opacity: 1;
 	border-color: rgba(243, 244, 246, var(--tw-border-opacity));
 }
-
 .border-gray-400 {
 	--tw-border-opacity: 1;
 	border-color: rgba(156, 163, 175, var(--tw-border-opacity));
@@ -1639,18 +1669,6 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
 }
-.bg-purple-200 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(221, 214, 254, var(--tw-bg-opacity));
-}
-.bg-purple-500 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(139, 92, 246, var(--tw-bg-opacity));
-}
-.bg-green-400 {
-	--tw-bg-opacity: 1;
-	background-color: rgba(52, 211, 153, var(--tw-bg-opacity));
-}
 .bg-green-200 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(167, 243, 208, var(--tw-bg-opacity));
@@ -1687,6 +1705,9 @@ select {
 }
 .p-6 {
 	padding: 1.5rem;
+}
+.p-0 {
+	padding: 0px;
 }
 .px-4 {
 	padding-left: 1rem;
@@ -1782,14 +1803,12 @@ select {
 .pb-1 {
 	padding-bottom: 0.25rem;
 }
-
 .pt-8 {
 	padding-top: 2rem;
 }
 .pb-24 {
 	padding-bottom: 6rem;
 }
-
 .pr-16 {
 	padding-right: 4rem;
 }
@@ -1801,6 +1820,9 @@ select {
 }
 .text-right {
 	text-align: right;
+}
+.align-baseline {
+	vertical-align: baseline;
 }
 .font-sans {
 	font-family: Nunito, ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -1864,14 +1886,17 @@ select {
 .leading-4 {
 	line-height: 1rem;
 }
-.leading-10 {
-	line-height: 2.5rem;
-}
 .leading-8 {
 	line-height: 2rem;
 }
+.leading-10 {
+	line-height: 2.5rem;
+}
 .tracking-widest {
 	letter-spacing: 0.1em;
+}
+.tracking-wider {
+	letter-spacing: 0.05em;
 }
 .text-gray-500 {
 	--tw-text-opacity: 1;
@@ -1933,7 +1958,6 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(16, 185, 129, var(--tw-text-opacity));
 }
-
 .text-blue-400 {
 	--tw-text-opacity: 1;
 	color: rgba(96, 165, 250, var(--tw-text-opacity));
@@ -1954,7 +1978,6 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
-
 .underline {
 	text-decoration: underline;
 }
@@ -2451,6 +2474,10 @@ select {
 
 	.sm\:items-center {
 		align-items: center;
+	}
+
+	.sm\:justify-start {
+		justify-content: flex-start;
 	}
 
 	.sm\:justify-center {
