--- a/public/css/app.css
+++ b/public/css/app.css
@@ -1158,6 +1158,10 @@ select {
 	margin-top: 4rem;
 	margin-bottom: 4rem;
 }
+.my-1 {
+	margin-top: 0.25rem;
+	margin-bottom: 0.25rem;
+}
 .my-10 {
 	margin-top: 2.5rem;
 	margin-bottom: 2.5rem;
@@ -1239,6 +1243,9 @@ select {
 .mb-4 {
 	margin-bottom: 1rem;
 }
+.ml-auto {
+	margin-left: auto;
+}
 .mr-1 {
 	margin-right: 0.25rem;
 }
@@ -1247,9 +1254,6 @@ select {
 }
 .mb-2 {
 	margin-bottom: 0.5rem;
-}
-.ml-auto {
-	margin-left: auto;
 }
 .mb-16 {
 	margin-bottom: 4rem;
@@ -1353,6 +1357,9 @@ select {
 .h-32 {
 	height: 8rem;
 }
+.h-screen {
+	height: 100vh;
+}
 .min-h-screen {
 	min-height: 100vh;
 }
@@ -1416,8 +1423,17 @@ select {
 .max-w-xl {
 	max-width: 36rem;
 }
+.max-w-4xl {
+	max-width: 56rem;
+}
+.max-w-full {
+	max-width: 100%;
+}
 .max-w-6xl {
 	max-width: 72rem;
+}
+.max-w-md {
+	max-width: 28rem;
 }
 .flex-1 {
 	flex: 1 1 0%;
@@ -1724,6 +1740,10 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(245, 158, 11, var(--tw-bg-opacity));
 }
+.bg-blue-500 {
+	--tw-bg-opacity: 1;
+	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+}
 .bg-gray-600 {
 	--tw-bg-opacity: 1;
 	background-color: rgba(75, 85, 99, var(--tw-bg-opacity));
@@ -1732,12 +1752,15 @@ select {
 	--tw-bg-opacity: 1;
 	background-color: rgba(55, 65, 81, var(--tw-bg-opacity));
 }
-.bg-blue-500 {
+.bg-gray-900 {
 	--tw-bg-opacity: 1;
-	background-color: rgba(59, 130, 246, var(--tw-bg-opacity));
+	background-color: rgba(17, 24, 39, var(--tw-bg-opacity));
 }
 .bg-opacity-25 {
 	--tw-bg-opacity: 0.25;
+}
+.bg-opacity-40 {
+	--tw-bg-opacity: 0.4;
 }
 .bg-cover {
 	background-size: cover;
@@ -1835,6 +1858,10 @@ select {
 	padding-left: 1.25rem;
 	padding-right: 1.25rem;
 }
+.px-20 {
+	padding-left: 5rem;
+	padding-right: 5rem;
+}
 .pt-6 {
 	padding-top: 1.5rem;
 }
@@ -1876,6 +1903,9 @@ select {
 }
 .pt-8 {
 	padding-top: 2rem;
+}
+.pt-10 {
+	padding-top: 2.5rem;
 }
 .text-left {
 	text-align: left;
@@ -2027,6 +2057,10 @@ select {
 	--tw-text-opacity: 1;
 	color: rgba(59, 130, 246, var(--tw-text-opacity));
 }
+.text-yellow-300 {
+	--tw-text-opacity: 1;
+	color: rgba(252, 211, 77, var(--tw-text-opacity));
+}
 .text-blue-600 {
 	--tw-text-opacity: 1;
 	color: rgba(37, 99, 235, var(--tw-text-opacity));
@@ -2046,10 +2080,6 @@ select {
 .text-yellow-400 {
 	--tw-text-opacity: 1;
 	color: rgba(251, 191, 36, var(--tw-text-opacity));
-}
-.text-yellow-300 {
-	--tw-text-opacity: 1;
-	color: rgba(252, 211, 77, var(--tw-text-opacity));
 }
 .underline {
 	text-decoration: underline;
@@ -2308,6 +2338,13 @@ select {
 .hover\:text-white:hover {
 	--tw-text-opacity: 1;
 	color: rgba(255, 255, 255, var(--tw-text-opacity));
+}
+.hover\:text-gray-100:hover {
+	--tw-text-opacity: 1;
+	color: rgba(243, 244, 246, var(--tw-text-opacity));
+}
+.hover\:underline:hover {
+	text-decoration: underline;
 }
 .focus\:z-10:focus {
 	z-index: 10;
@@ -2638,6 +2675,10 @@ select {
 		margin-top: 0px;
 	}
 
+	.md\:block {
+		display: block;
+	}
+
 	.md\:grid {
 		display: grid;
 	}
@@ -2694,6 +2735,14 @@ select {
 
 	.lg\:w-1\/2 {
 		width: 50%;
+	}
+
+	.lg\:w-2\/3 {
+		width: 66.666667%;
+	}
+
+	.lg\:w-2\/6 {
+		width: 33.333333%;
 	}
 
 	.lg\:grid-cols-4 {
